--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,11 @@
 .popup__container {
+  display: flex;
+  flex-direction: column;
   margin: 50px 0 0 0;
   padding: 0;
   position: relative;
   max-width: 430px;
-  min-height: 330px;
+  /* min-height: 330px; */
   width: 100%;
   box-sizing: border-box;
   background: #fff;
