--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -2,8 +2,8 @@
   grid-area: edit;
   width: 24px;
   height: 24px;
-  border: none;
-  border-radius: 2px solid #000;
+  border: 1px solid #fff;
+  border-radius: 2px;
   background-image: url(../../../images/icon/buttonEdit.svg);
   background-repeat: no-repeat;
   /* background-size: 24px 24px; */
