--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -10,6 +10,7 @@
   overflow: hidden;
   align-self: baseline;
   text-overflow: ellipsis;
+  max-width: 350px;
 }
 @media screen and (max-width: 730px) {
   .profile__name {
