--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -6,6 +6,7 @@
   border-radius: 2px;
   background-image: url(../../../images/icon/buttonEdit.svg);
   background-repeat: no-repeat;
+  background-position: center;
   /* background-size: 24px 24px; */
   background-color: black;
   align-self: baseline;
