--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,4 +1,7 @@
 .card__image {
   grid-area: image;
   border-radius: 10px 10px 0px 0px;
+  width: 282px;
+  height: 282px;
+  object-fit: cover;
 }
