--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,8 +2,9 @@
   width: 100%;
   height: 100%;
   display: flex;
-  /* visibility: visible; */
   visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.2s linear;
   justify-content: center;
   align-items: center;
   position: fixed;
