--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -5,6 +5,7 @@
   font-size: 14px;
   line-height: 17px;
   margin: 0 36px;
+  row-gap: 30px;
 }
 @media screen and (max-width: 500px) {
   .popup__form {
