--- a/src/blocks/popup/__submit/popup__submit.css
+++ b/src/blocks/popup/__submit/popup__submit.css
@@ -5,17 +5,19 @@
   height: 50px;
   box-sizing: border-box;
   border-radius: 2px;
-  border: none;
-  background-color: #000;
-  color: #fff;
+  border: 1px solid #000;
+  /* background-color: #000; */
+  color: #000;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
+  opacity: 0.2;
+  cursor: default;
 }
 
 .popup__submit:hover {
-  opacity: 0.8;
+  opacity: 0.2;
 }
 
 @media screen and (max-width: 500px) {
