--- a/src/blocks/card/__delete/card__delete.css
+++ b/src/blocks/card/__delete/card__delete.css
@@ -8,7 +8,7 @@
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
-
+  display: none;
   /* z-index: 3; */
 
   top: 20px;
