--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -3,7 +3,13 @@
   height: 120px;
   border-radius: 50%;
   margin-right: 40px;
+  object-fit: cover;
 }
+/* .profile__avatar:hover {
+  background-image: url("../../../images/icon/buttonEditAvatar.svg");
+  z-index: 4;
+  cursor: pointer;
+} */
 
 @media screen and (max-width: 1070px) {
   .profile__avatar {
