--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@
 @import url(./blocks/profile/__info/profile__info.css);
 @import url(./blocks/profile/__name/profile__name.css);
 @import url(./blocks/profile/__content/profile__content.css);
+@import url(./blocks/profile/__avatar-edit/profile__avatar-edit.css);
+@import url(./blocks/profile/__avatar-container/profile__avatar-container.css);
 
 @import url(./blocks/cards/cards.css);
 
@@ -25,6 +27,9 @@
 @import url(./blocks/card/__like/card__like.css);
 @import url(./blocks/card/__like/_active/card__like_active.css);
 @import url(./blocks/card/__delete/card__delete.css);
+@import url(./blocks/card/__like-counter/card__like-counter.css);
+@import url(./blocks/card/__like-area/card__like-area.css);
+@import url(./blocks/card/__delete/_active/card__delete_active.css);
 
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__copyright/footer__copyright.css);
